// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectorGroup should render with default styles 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: auto;
}

.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-0>div:not(:last-child) {
  margin-right: 16px;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.circuit-4 label {
  height: 100%;
}

.circuit-5 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-5:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-5:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-5:focus:not(:focus-visible)+label::before {
  box-shadow: none;
}

.circuit-5:checked+label {
  background-color: var(--cui-bg-accent);
}

.circuit-5:checked+label::before {
  border: 2px solid var(--cui-border-accent);
}

.circuit-5:disabled+label,
.circuit-5[disabled]+label {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-5:disabled+label::before,
.circuit-5[disabled]+label::before {
  border: 2px solid var(--cui-border-normal-disabled);
}

.circuit-5:disabled:checked+label,
.circuit-5[disabled]:checked+label {
  background-color: var(--cui-bg-accent-disabled);
}

.circuit-5:disabled:checked+label::before,
.circuit-5[disabled]:checked+label::before {
  border: 2px solid var(--cui-border-accent-disabled);
}

.circuit-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  text-align: center;
  position: relative;
  border-radius: 8px;
  -webkit-transition: box-shadow 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out;
  padding: calc(12px) 24px;
  width: 100%;
}

.circuit-6::before {
  display: block;
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 8px;
  border: 1px solid var(--cui-border-normal);
  -webkit-transition: border 120ms ease-in-out;
  transition: border 120ms ease-in-out;
}

.circuit-6:hover {
  background-color: var(--cui-bg-normal-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-6:hover::before {
  border-color: var(--cui-border-normal-hovered);
}

.circuit-6:active {
  background-color: var(--cui-bg-normal-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-6:active::before {
  border-color: var(--cui-border-normal-pressed);
}

<div>
  <fieldset
    class="circuit-0"
    name="selector-group_1"
  >
    <legend
      class="circuit-1"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Choose an option
      </span>
    </legend>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby=""
        class="circuit-5"
        id="selector_2"
        name="selector-group_1"
        type="radio"
        value="first"
      />
      <label
        class="circuit-6"
        for="selector_2"
      >
        Option 1
      </label>
    </div>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby=""
        class="circuit-5"
        id="selector_3"
        name="selector-group_1"
        type="radio"
        value="second"
      />
      <label
        class="circuit-6"
        for="selector_3"
      >
        Option 2
      </label>
    </div>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby=""
        class="circuit-5"
        id="selector_4"
        name="selector-group_1"
        type="radio"
        value="third"
      />
      <label
        class="circuit-6"
        for="selector_4"
      >
        Option 3
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`SelectorGroup should render with horizontal layout by default 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: auto;
}

.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-0>div:not(:last-child) {
  margin-right: 16px;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.circuit-4 label {
  height: 100%;
}

.circuit-5 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-5:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-5:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-5:focus:not(:focus-visible)+label::before {
  box-shadow: none;
}

.circuit-5:checked+label {
  background-color: var(--cui-bg-accent);
}

.circuit-5:checked+label::before {
  border: 2px solid var(--cui-border-accent);
}

.circuit-5:disabled+label,
.circuit-5[disabled]+label {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-5:disabled+label::before,
.circuit-5[disabled]+label::before {
  border: 2px solid var(--cui-border-normal-disabled);
}

.circuit-5:disabled:checked+label,
.circuit-5[disabled]:checked+label {
  background-color: var(--cui-bg-accent-disabled);
}

.circuit-5:disabled:checked+label::before,
.circuit-5[disabled]:checked+label::before {
  border: 2px solid var(--cui-border-accent-disabled);
}

.circuit-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  text-align: center;
  position: relative;
  border-radius: 8px;
  -webkit-transition: box-shadow 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out;
  padding: calc(12px) 24px;
  width: 100%;
}

.circuit-6::before {
  display: block;
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 8px;
  border: 1px solid var(--cui-border-normal);
  -webkit-transition: border 120ms ease-in-out;
  transition: border 120ms ease-in-out;
}

.circuit-6:hover {
  background-color: var(--cui-bg-normal-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-6:hover::before {
  border-color: var(--cui-border-normal-hovered);
}

.circuit-6:active {
  background-color: var(--cui-bg-normal-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-6:active::before {
  border-color: var(--cui-border-normal-pressed);
}

<div>
  <fieldset
    class="circuit-0"
    name="selector-group_17"
  >
    <legend
      class="circuit-1"
    >
      <span
        class="circuit-2 circuit-3"
      >
        Choose an option
      </span>
    </legend>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby=""
        class="circuit-5"
        id="selector_18"
        name="selector-group_17"
        type="radio"
        value="first"
      />
      <label
        class="circuit-6"
        for="selector_18"
      >
        Option 1
      </label>
    </div>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby=""
        class="circuit-5"
        id="selector_19"
        name="selector-group_17"
        type="radio"
        value="second"
      />
      <label
        class="circuit-6"
        for="selector_19"
      >
        Option 2
      </label>
    </div>
    <div
      class="circuit-4"
    >
      <input
        aria-describedby=""
        class="circuit-5"
        id="selector_20"
        name="selector-group_17"
        type="radio"
        value="third"
      />
      <label
        class="circuit-6"
        for="selector_20"
      >
        Option 3
      </label>
    </div>
  </fieldset>
</div>
`;
